dev/presenton/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: presenton
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`presenton.mtaku3.com`)
      kind: Rule
      middlewares:
        - name: tinyauth
          namespace: traefik
      services:
        - name: presenton
          port: http
  tls:
    secretName: web-tls-cert
